<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/more_txtOptionBtn"
            style="@style/styleFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/my_bookings"
            app:icon="@drawable/shape_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textSizeBtn"
            style="@style/styleFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr"
            app:icon="@drawable/ic_retail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTextBtn"
            style="@style/styleFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home"
            app:icon="@drawable/vector_smart_object" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textColourBTN"
            style="@style/styleFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_qr"
            app:icon="@drawable/shape_1" />

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        app:itemIconTint="@null"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:scrollIndicators="bottom"
        android:visibility="gone">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/scan_qr_tg"
            android:text="Monday" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home_select_tg"
            android:text="Tuesday" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday" />
    </com.google.android.material.tabs.TabLayout>


</LinearLayout>